common-applications/control/cla-migration/backend/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
  name: cla-ingress-backend
  namespace: cla-migration
spec:
  tls:
    - hosts:
        - clasign.osinfra.cn
      secretName: tls-secrets
  rules:
    - host: clasign.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: cla-backend-service
            servicePort: 80
          path: /api(/|$)(.*)
        - backend:
            serviceName: cla-robot-service
            servicePort: 80
          path: /robot(/|$)(.*)
